Bug 378159 - Moving guides with a stylus is slow
Summary: Moving guides with a stylus is slow
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 2.9.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-27 14:26 UTC by Halla Rempt
Modified: 2017-03-31 14:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2017-03-27 14:26:38 UTC
This probably needs event compression.
Comment 1 Dmitry Kazakov 2017-03-31 14:15:38 UTC
Git commit 2cb2f460ea1f2d0c8a296921f600b8c121cf13c0 by Dmitry Kazakov.
Committed on 31/03/2017 at 14:15.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Add compression to the guides

Even though I couldn't reproduce the original bug I added
a bit of compression to the setting of guide value to the document.

M  +31   -9    libs/ui/canvas/kis_guides_manager.cpp
M  +3    -0    libs/ui/canvas/kis_guides_manager.h

https://commits.kde.org/krita/2cb2f460ea1f2d0c8a296921f600b8c121cf13c0
Comment 2 Halla Rempt 2017-03-31 14:49:00 UTC
Git commit 9e2b8c5b07deccd4a616ad7930a91e8cc784a85b by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 31/03/2017 at 14:48.
Pushed by rempt into branch 'master'.

Add compression to the guides

Even though I couldn't reproduce the original bug I added
a bit of compression to the setting of guide value to the document.

M  +31   -9    libs/ui/canvas/kis_guides_manager.cpp
M  +3    -0    libs/ui/canvas/kis_guides_manager.h

https://commits.kde.org/krita/9e2b8c5b07deccd4a616ad7930a91e8cc784a85b
Comment 3 Halla Rempt 2017-03-31 14:50:33 UTC
Git commit c91982a5bd4e51ad7d231e33efada2d779e56fac by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 31/03/2017 at 14:50.
Pushed by rempt into branch 'krita/3.1'.

Add compression to the guides

Even though I couldn't reproduce the original bug I added
a bit of compression to the setting of guide value to the document.

M  +31   -9    libs/ui/canvas/kis_guides_manager.cpp
M  +3    -0    libs/ui/canvas/kis_guides_manager.h

https://commits.kde.org/krita/c91982a5bd4e51ad7d231e33efada2d779e56fac