Add compression to the guides

Even though I couldn't reproduce the original bug I added
a bit of compression to the setting of guide value to the document.

BUG:378159